--- a/styles.css
+++ b/styles.css
@@ -12,24 +12,23 @@
     src: url('./matter-light.woff2') format('woff2');
 }
 
+
+.movercirc video {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%,-50%) scale(00.4);
+}
+
 html, body{
     width: 100%;
-    height: 100%;
+    overscroll-behavior-y: contain; 
 }
 
-#loader{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: black;
+h2{
+    font-family: 'matter',sans-serif;
 }
 
-#loader h1{
-    font-size: 15vw;
-    color: #cccccc;
-}
 
 #main{
     width: 100%;
@@ -38,7 +37,6 @@ html, body{
 
 #home{
     width: 100%;
-    min-height: 100vh;
 }
 
 #right a{
@@ -146,7 +144,7 @@ html, body{
 
 h3::selection,::selection,a::selection,h2::selection,p::selection{
     background-color: #121111;
-    color: #dadada;
+    color: white;
 }
 
 .tech{
@@ -297,31 +295,29 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     overflow: scroll; 
   }
   
-  /* WebKit-based browsers */
-::-webkit-scrollbar {
-    width: 4px; /* Adjust scrollbar width */
-    height: 8px; /* Adjust scrollbar height for horizontal */
-    background-color: black; /* Background color of the scrollbar track */
+
+/* ::-webkit-scrollbar {
+    width: 4px;
+    height: 8px;
+    background-color: black;
     position: absolute;
     bottom: 0;
   }
   
   ::-webkit-scrollbar-track {
-    background-color: black; /* Background color of the scrollbar track */
+    background-color: black;
   }
   
-  /* Handle (thumb) */
   ::-webkit-scrollbar-thumb {
-    background-color: white; /* Color of the scrollbar thumb */
-    border-radius: 10px; /* Round edges */
-    border: 2px solid black; /* Border around the thumb */
+    background-color: white;
+    border-radius: 10px; 
+    border: 2px solid black; 
   }
-  
-  /* Handle on hover */
+
   ::-webkit-scrollbar-thumb:hover {
-    background-color: #cccccc; /* Change color on hover */
+    background-color: #cccccc;
   }
-  
+   */
 
 .card{
     background-color: #dadada;
@@ -361,6 +357,10 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.footupper{
+    font-family: "matter";
 }
 
 .socials{
@@ -406,4 +406,132 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     display: flex;
     justify-content: center;
 
+}
+
+@media only screen and (max-width: 1200px) {
+    
+    .card-container{
+        flex-wrap: wrap;
+    }
+
+    .card{
+        width: 40vw;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cardbtn a{
+        font-size: 4vw;
+        width: 45%;
+    }
+
+    .cardimg{
+        height: 30vw;
+        width: 40vw;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+
+    #headings{
+        flex-direction: column;
+    }
+    #homemain{
+        padding: 5vw;
+    }
+    #homemain h1{
+        font-size: 3vw;
+    }
+    #headings h1{
+        font-size: 15vw;
+        letter-spacing: 1px;
+    }
+    #right{
+        flex-direction: column;
+    }
+    #right a{
+        display: none;
+        font-size: 5vw;
+        padding: 10px 20px;
+    }
+    #homelast{
+        padding: 5vw;
+        width: 100%;
+    }
+    #homelast p{
+        font-size: 4vw;
+    }
+    .tech{
+        padding: 4vw 5vw;
+    }
+
+    .techstack{
+        gap:4vw;
+        
+    }
+
+    .tc{
+        width: 150px;
+        justify-content: flex-start;
+    }
+
+    #feature{
+        padding: 5vw;
+    }
+    #fimages{
+        margin-top: 0;
+    }
+    #feature h1{
+        font-size: 7vw;
+        padding-bottom: 5vw;
+    }
+    #fleft{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        gap: 5vh;
+    }
+    .lem{
+        height: 30vh;
+    }
+    .images{
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .images img{
+        width: 100%;
+        height: 30vh;
+        border: 1px solid green;
+    }
+    .lem h1{
+        font-size: 0.01vw;
+    }
+
+
+    .card-container{
+        flex-wrap: wrap;
+    }
+
+    .card{
+        width: 40vw;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .cardbtn a{
+        font-size: 4vw;
+        width: 45%;
+    }
+
+    .cardimg{
+        height: 30vw;
+        width: 40vw;
+    }
+
+    .footupper h1{
+        font-size: 4vw;
+        font-family: monospace;
+    }
 }
