--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,20 @@ h2{
     opacity: 1;
 }
 
+#loader{
+    position: absolute;
+    z-index: 999;
+    opacity: 1;
+    width: 98.5vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+    background-color: #000;
+    color: #dadada;
+}
+
 #home{
     width: 100%;
 }
@@ -149,6 +163,10 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 
 .tech{
     padding: 8vw 11vw;
+}
+
+.tech h1{
+    font-family: 'matter';
 }
 
 .techstack{
@@ -268,19 +286,19 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 
 .projects{
     padding: 4vw;
-    background-color: black;
+    /* background-color: black; */
     height: 105vh;
 }
 
 .projects h1{
     padding: 4vw;
     font-size: 3vw;
-    color: aliceblue;
+    color: black;
 }
 
 .card-container{
     display: flex;
-    gap: 4vw;
+    gap: 3vw;
     overflow: hidden; 
     /* *****Bhulna Mat******** */
     padding-bottom: 50px;
@@ -323,6 +341,8 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     background-color: #dadada;
     width: 20vw;
     border-radius: 5%;
+    
+    border: 2px solid black;
 }
 
 .cardbtn{
@@ -343,7 +363,7 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 .cardimg{
     border-radius: 10%;
     height: 20vw;
-    width: 20vw;
+    width: 19.8vw;
     display: flex;
     align-items: center;
     background-color: #121111;
@@ -351,6 +371,8 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 
 .foot{
     padding-top: 10vh ;
+    color: white;
+    background-color: black;
 }
 
 .footupper{
@@ -359,7 +381,7 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     justify-content: center;
 }
 
-.footupper{
+.footupper h1{
     font-family: "matter";
 }
 
@@ -373,6 +395,7 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 
 .socials i{
     font-size: 4.5vh;
+    color: white;
 }
 
 .socials a{
@@ -381,7 +404,7 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
     width: 8vh;
     height: 8vh;
     border-radius: 50%;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 255, 255);
     padding: 0.5vw;
     display: flex;
     justify-content: center;
@@ -391,10 +414,6 @@ h3::selection,::selection,a::selection,h2::selection,p::selection{
 .socials a:hover{
     color: white;
     background-color: #000;
-}
-
-.socials i:hover{
-    color: white;
 }
 
 .c i{
